lintian-brush (0.123) UNRELEASED; urgency=medium

  * Drop debian/upstream/metadata: package is native.
  * Add lintian-override for runtime debhelper dependency, which is
    actually necessary.
  * Bump debhelper from old 12 to 13.
  * Update standards version to 4.6.0, no changes needed.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 17 Feb 2022 20:11:06 +0000

lintian-brush (0.122) unstable; urgency=medium

  * Also check 'Essential: yes' packages when tidying up build dependencies.
    Thanks to Andreas Beckmann for reporting.
  * Only find out once per run whether the changelog should be updated.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 17 Feb 2022 20:05:18 +0000

lintian-brush (0.121) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Don't add reference comment field when License-Reference field exists.
  * Convert index.desc to yaml.

  [ Simon Chopin ]
  * Fix the lintian compatibility code.
  * Relax the lintian-brush version number testing to allow for arbitrary
    suffixes, such as ubuntu1.

  [ Jelmer Vernooĳ ]
  * debian-source-options-has-custom-compression-settings: Drop newline
    in override info.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 02 Feb 2022 23:13:27 +0000

lintian-brush (0.120) unstable; urgency=medium

  * Don't add debhelper dependency when debhelper-compat is present.
    Closes: #1003590

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 23 Jan 2022 23:58:15 +0000

lintian-brush (0.119) unstable; urgency=medium

  * comma-separated-files-in-dep5-copyright: Ignore copyright files that
    are not machine readable.
  * Don't strip whitespace from m4 files.
  * Use workspace interface from newer Breezy.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 23 Jan 2022 19:12:06 +0000

lintian-brush (0.118) unstable; urgency=medium

  * Support a UDD_URL environment variable, for contacting an
    alternative UDD.
  * Update to lintian's new tag names.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 29 Dec 2021 19:41:30 +0000
